# fol

./: .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  Cargo.toml  Makefile  PLAN.md  README.md  follang.html  index.html  interop.lock.toml  print.html  searcher-09f2665d.js  searchindex-0512914e.js  searchindex-184168a3.js  searchindex-21f6de38.js  searchindex-2f96a772.js  searchindex-580adf60.js  searchindex-6bb3a992.js  searchindex-72f9860b.js  searchindex-7891e20b.js  searchindex-91c53c3f.js  toc-5e2af248.js  toc-7a86c1dd.js  toc-7f3fcfec.js  toc-df4b2410.js  toc.html
.github/workflows/: book.yml  release.yml  tests.yml
000_overview/: 100_conventions.html  200_frontend.html  300_editor.html  _index.html
025_toolchain/: 100_install.html  200_versions.html  _index.html
050_tooling/: 100_frontend.html  200_tool_commands.html  300_editor.html  350_compiler_integration.html  400_treesitter.html  450_feature_checklist.html  500_lsp.html  600_neovim.html  _index.html
055_build/: 100_build_file.html  200_graph_api.html  300_handle_api.html  400_options.html  500_control_flow.html  600_artifacts.html  700_cross_compilation.html  900_direction.html  _index.html
100_lexical/: 100_keywords.html  200_identifiers.html  300_comments.html  400_whitespaces.html  500_letters.html  600_numbers.html  700_symbols.html  _index.html
200_expressions/: _index.html
200_expressions/200_sta/: 100_control.html  _index.html
200_expressions/300_exp/: 200_literals.html  (+4 more)
300_meta/: 100_buildin.html  200_macros.html  300_alternatives.html  400_defaults.html  500_templates.html  _index.html
400_type/: 100_ordinal.html  200_container.html  300_complex.html  400_special.html  _index.html
500_items/: 100_variables.html  400_standards.html  500_generics.html  _index.html
600_modules/: 100_import.html  200_blocks.html  300_tests.html  _index.html
650_errors/: 100_braking.html  200_recover.html  300_diagnostics.html  _index.html
700_sugar/: 100_silents.html  200_pipes.html  250_defer.html  250_dfr.html  300_mixture.html  400_limits.html  450_matching.html  500_rolling.html  600_unpacking.html  700_inquiry.html  800_chaining.html  _index.html
750_conversion/: 100_coercion.html  200_casting.html  _index.html
800_memory/: 100_ownership.html  150_capabilities.html  160_finalization.html  200_pointers.html  _index.html
900_processor/: 100_eventuals.html  200_corutines.html  _index.html
950_interop/: _index.html
docs/: bundled-std.md  editor-sync.md  runtime-models.md  v2-full-contract.md  v2-generics-m1.md  v2-quality-gates.md  v2-runtime-strategy.md  v2-standards-m2.md
lang/compiler/fol-package/: Cargo.toml
lang/compiler/fol-package/src/: build.rs  build_dependency.rs  build_entry.rs  config.rs  errors.rs  lib.rs  locator.rs  lockfile.rs  metadata.rs  model.rs  paths.rs
lang/compiler/fol-package/src/session/: tests.rs
lang/compiler/fol-resolver/: Cargo.toml
lang/compiler/fol-resolver/src/: collect.rs  errors.rs  imports.rs  inject.rs  lib.rs  model.rs
lang/compiler/fol-resolver/src/session/: mod.rs  tests.rs
lang/compiler/fol-resolver/src/traverse/: mod.rs  references.rs  resolve.rs  scope.rs
lang/compiler/fol-resolver/src/traverse/node/: inquiry.rs  mod.rs  routines.rs  statements.rs  types.rs
lang/compiler/fol-typecheck/: Cargo.toml
lang/compiler/fol-typecheck/src/: channel_analysis.rs  config.rs  decls.rs  editor.rs  errors.rs  lib.rs  model.rs  session.rs  types.rs
lang/compiler/fol-typecheck/src/exprs/: access.rs  bindings.rs  calls.rs  controlflow.rs  helpers.rs  literals.rs  mod.rs  operators.rs  references.rs
lang/tooling/fol-interop/: Cargo.toml
lang/tooling/fol-interop/src/: analysis.rs  anchor.rs  generation.rs  identity.rs  lib.rs  lock.rs  materialization.rs  pipeline.rs  source.rs  toolchain.rs
plan/: C-ABI-CONSIDERATION.md  V2_PLAN.md  V3_MEM.md  V3_PROC.md  V4_PLAN.md  VERSIONS.md
test/: run_tests.rs  v3_example_inventory.rs
tools/: verify-interop-lock.sh
(+907 files in other folders)
