[package]
name = "fol-resolver"
version.workspace = true
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"
description = "Whole-program name resolution for FOL language"

[dependencies]
fol-types = { path = "../fol-types" }
fol-build = { path = "../../execution/fol-build" }
fol-package = { path = "../fol-package" }
fol-parser = { path = "../fol-parser" }
fol-diagnostics = { path = "../fol-diagnostics" }
fol-lexer = { path = "../fol-lexer" }
fol-stream = { path = "../fol-stream" }
stacker = "0.1.24"

[dev-dependencies]
