[package]
name = "fol-typecheck"
version = "0.1.4"
edition = "2021"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]

[lib]
name = "fol_typecheck"
path = "src/lib.rs"

[dependencies]
fol-diagnostics = { path = "../fol-diagnostics" }
fol-intrinsics = { path = "../fol-intrinsics" }
fol-lexer = { path = "../fol-lexer" }
fol-parser = { path = "../fol-parser" }
fol-resolver = { path = "../fol-resolver" }

[dev-dependencies]
fol-stream = { path = "../fol-stream" }
